[project]
name = "eg-subagents"
version = "0.1.0"
description = "smolagents dynamic sub-agent demo"
requires-python = ">=3.11"
dependencies = [
    "html2text>=2024.2.26",
    "numpy>=1.26",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "smolagents[litellm,toolkit]>=1.23.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.isort]
known-third-party = ["smolagents"]
